LLM4Config/assets/traefik_traefik-hub.yaml
---
# Source: traefik-hub/templates/admission-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission
  namespace: default
  labels:
    app.kubernetes.io/name: traefik-hub
    app.kubernetes.io/instance: my-traefik-hub-default
    helm.sh/chart: traefik-hub-4.2.0
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - name: https
      port: 443
      targetPort: admission
  selector:
    app.kubernetes.io/name: traefik-hub
    app.kubernetes.io/instance: my-traefik-hub-default
---
# Source: traefik-hub/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-traefik-hub
  namespace: default
  labels:
    app.kubernetes.io/name: traefik-hub
    app.kubernetes.io/instance: my-traefik-hub-default
    helm.sh/chart: traefik-hub-4.2.0
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: 
  selector:
    app.kubernetes.io/name: traefik-hub
    app.kubernetes.io/instance: my-traefik-hub-default
  ports: 
    - name: web
      port: 80
      targetPort: web
    - name: websecure
      port: 443
      targetPort: websecure
---
# Source: traefik-hub/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-traefik-hub
  namespace: default
  labels:
    app.kubernetes.io/name: traefik-hub
    app.kubernetes.io/instance: my-traefik-hub-default
    helm.sh/chart: traefik-hub-4.2.0
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik-hub
      app.kubernetes.io/instance: my-traefik-hub-default
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  minReadySeconds: 0
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "9100"
      labels:
        app.kubernetes.io/name: traefik-hub
        app.kubernetes.io/instance: my-traefik-hub-default
        helm.sh/chart: traefik-hub-4.2.0
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: my-traefik-hub
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: name
                      operator: In
                      values:
                        - traefik
                topologyKey: "kubernetes.io/hostname"
      topologySpreadConstraints:
        - maxSkew: 2
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: "ScheduleAnyway"
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: traefik-hub
              app.kubernetes.io/instance: my-traefik-hub-default
      terminationGracePeriodSeconds: 30
      hostNetwork: false
      priorityClassName: 
      automountServiceAccountToken: true
      containers:
        - image: ghcr.io/traefik/traefik-hub:v2.11.0
          imagePullPolicy: IfNotPresent
          name: traefik
          args:
            - ic
            - --entrypoints.metrics.address=:9100
            - --entrypoints.traefik.address=:9000
            - --entrypoints.web.address=:8000
            - --entrypoints.websecure.address=:8443
            - --entrypoints.websecure.http.tls=true
            - --hub.admission.listenAddr=:7500
            - --hub.token=$(HUB_TOKEN)
            - --metrics.prometheus.entryPoint=metrics
            - --ping.entrypoint=traefik
            - --providers.kubernetescrd.allowCrossNamespace=true
            - --providers.kubernetescrd.allowEmptyServices=true
            - --providers.kubernetescrd.allowExternalNameServices=true
            - --providers.kubernetesingress.allowEmptyServices=true
            - --providers.kubernetesingress.allowExternalNameServices=true
          readinessProbe:
            httpGet:
              path: /ping
              port: 9000
              scheme: HTTP
            failureThreshold: 1
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /ping
              port: 9000
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          ports:
            - name: "admission"
              containerPort: 7500
              protocol: "TCP"
            - name: "web"
              containerPort: 8000
              protocol: "TCP"
            - name: "websecure"
              containerPort: 8443
              protocol: "TCP"
            - name: "traefik"
              containerPort: 9000
              protocol: "TCP"
            - name: "metrics"
              containerPort: 9100
              protocol: "TCP"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: data
              mountPath: /var/lib/traefik
            - name: tmp
              mountPath: /tmp
      securityContext:
        fsGroup: 65532
      volumes:
        - name: data
          emptyDir: { }
        - name: tmp
          emptyDir: { }
---
# Source: traefik-hub/templates/admission-controller.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: hub-edge-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: traefik-hub
    app.kubernetes.io/instance: my-traefik-hub-default
    helm.sh/chart: traefik-hub-4.2.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: admission.traefik.svc
    clientConfig:
      service:
        name: admission
        namespace: default
        path: /edge-ingress
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQU5DQzladTdEWnByTW5vd1oveStZaFl3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllXUnRhWE56YVc5dUxtUmxabUYxYkhRdWMzWmpNQjRYRFRJME1Ea3hOakE0TWpJeQpOMW9YRFRJMU1Ea3hOakE0TWpJeU4xb3dJREVlTUJ3R0ExVUVBeE1WWVdSdGFYTnphVzl1TG1SbFptRjFiSFF1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQW5lZXZhSlJ0NzJCTDUyWmEKVlJmUjJJM202MEFnYlVSZ3JlSEx0U2pFOG5UN2grS25VTEtlTHVwanVTRmVIOVF2enVxZ1ZkeVdMSys2dkpWQgo1anF4K3NmbkFs [...]
    sideEffects: None
    admissionReviewVersions:
      - v1
    rules:
      - operations:
          - CREATE
          - UPDATE
          - DELETE
        apiGroups:
          - hub.traefik.io
        apiVersions:
          - v1alpha1
        resources:
          - edgeingresses
        scope: Namespaced
---
# Source: traefik-hub/templates/admission-controller.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: hub-acp
  namespace: default
  labels:
    app.kubernetes.io/name: traefik-hub
    app.kubernetes.io/instance: my-traefik-hub-default
    helm.sh/chart: traefik-hub-4.2.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: admission.traefik.svc
    clientConfig:
      service:
        name: admission
        namespace: default
        path: /acp
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQU5DQzladTdEWnByTW5vd1oveStZaFl3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllXUnRhWE56YVc5dUxtUmxabUYxYkhRdWMzWmpNQjRYRFRJME1Ea3hOakE0TWpJeQpOMW9YRFRJMU1Ea3hOakE0TWpJeU4xb3dJREVlTUJ3R0ExVUVBeE1WWVdSdGFYTnphVzl1TG1SbFptRjFiSFF1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQW5lZXZhSlJ0NzJCTDUyWmEKVlJmUjJJM202MEFnYlVSZ3JlSEx0U2pFOG5UN2grS25VTEtlTHVwanVTRmVIOVF2enVxZ1ZkeVdMSys2dkpWQgo1anF4K3NmbkFs [...]
    sideEffects: None
    admissionReviewVersions:
      - v1
    rules:
      - operations:
          - CREATE
          - UPDATE
          - DELETE
        apiGroups:
          - hub.traefik.io
        apiVersions:
          - v1alpha1
        resources:
          - accesscontrolpolicies
---
# Source: traefik-hub/templates/admission-controller.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: hub-api
  namespace: default
  labels:
    app.kubernetes.io/name: traefik-hub
    app.kubernetes.io/instance: my-traefik-hub-default
    helm.sh/chart: traefik-hub-4.2.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: hub-agent.traefik.portal
    clientConfig:
      service:
        name: admission
        namespace: default
        path: /api-portal
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQU5DQzladTdEWnByTW5vd1oveStZaFl3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllXUnRhWE56YVc5dUxtUmxabUYxYkhRdWMzWmpNQjRYRFRJME1Ea3hOakE0TWpJeQpOMW9YRFRJMU1Ea3hOakE0TWpJeU4xb3dJREVlTUJ3R0ExVUVBeE1WWVdSdGFYTnphVzl1TG1SbFptRjFiSFF1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQW5lZXZhSlJ0NzJCTDUyWmEKVlJmUjJJM202MEFnYlVSZ3JlSEx0U2pFOG5UN2grS25VTEtlTHVwanVTRmVIOVF2enVxZ1ZkeVdMSys2dkpWQgo1anF4K3NmbkFs [...]
    sideEffects: None
    admissionReviewVersions:
      - v1
    rules:
      - operations:
          - CREATE
          - UPDATE
          - DELETE
        apiGroups:
          - hub.traefik.io
        apiVersions:
          - v1alpha1
        resources:
          - apiportals
  - name: hub-agent.traefik.gateway
    clientConfig:
      service:
        name: admission
        namespace: default
        path: /api-gateway
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQU5DQzladTdEWnByTW5vd1oveStZaFl3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllXUnRhWE56YVc5dUxtUmxabUYxYkhRdWMzWmpNQjRYRFRJME1Ea3hOakE0TWpJeQpOMW9YRFRJMU1Ea3hOakE0TWpJeU4xb3dJREVlTUJ3R0ExVUVBeE1WWVdSdGFYTnphVzl1TG1SbFptRjFiSFF1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQW5lZXZhSlJ0NzJCTDUyWmEKVlJmUjJJM202MEFnYlVSZ3JlSEx0U2pFOG5UN2grS25VTEtlTHVwanVTRmVIOVF2enVxZ1ZkeVdMSys2dkpWQgo1anF4K3NmbkFs [...]
    sideEffects: None
    admissionReviewVersions:
      - v1
    rules:
      - operations:
          - CREATE
          - UPDATE
          - DELETE
        apiGroups:
          - hub.traefik.io
        apiVersions:
          - v1alpha1
        resources:
          - apigateways
  - name: hub-agent.traefik.api
    clientConfig:
      service:
        name: admission
        namespace: default
        path: /api
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQU5DQzladTdEWnByTW5vd1oveStZaFl3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllXUnRhWE56YVc5dUxtUmxabUYxYkhRdWMzWmpNQjRYRFRJME1Ea3hOakE0TWpJeQpOMW9YRFRJMU1Ea3hOakE0TWpJeU4xb3dJREVlTUJ3R0ExVUVBeE1WWVdSdGFYTnphVzl1TG1SbFptRjFiSFF1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQW5lZXZhSlJ0NzJCTDUyWmEKVlJmUjJJM202MEFnYlVSZ3JlSEx0U2pFOG5UN2grS25VTEtlTHVwanVTRmVIOVF2enVxZ1ZkeVdMSys2dkpWQgo1anF4K3NmbkFs [...]
    sideEffects: None
    admissionReviewVersions:
      - v1
    rules:
      - operations:
          - CREATE
          - UPDATE
          - DELETE
        apiGroups:
          - hub.traefik.io
        apiVersions:
          - v1alpha1
        resources:
          - apis
  - name: hub-agent.traefik.collection
    clientConfig:
      service:
        name: admission
        namespace: default
        path: /api-collection
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQU5DQzladTdEWnByTW5vd1oveStZaFl3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllXUnRhWE56YVc5dUxtUmxabUYxYkhRdWMzWmpNQjRYRFRJME1Ea3hOakE0TWpJeQpOMW9YRFRJMU1Ea3hOakE0TWpJeU4xb3dJREVlTUJ3R0ExVUVBeE1WWVdSdGFYTnphVzl1TG1SbFptRjFiSFF1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQW5lZXZhSlJ0NzJCTDUyWmEKVlJmUjJJM202MEFnYlVSZ3JlSEx0U2pFOG5UN2grS25VTEtlTHVwanVTRmVIOVF2enVxZ1ZkeVdMSys2dkpWQgo1anF4K3NmbkFs [...]
    sideEffects: None
    admissionReviewVersions:
      - v1
    rules:
      - operations:
          - CREATE
          - UPDATE
          - DELETE
        apiGroups:
          - hub.traefik.io
        apiVersions:
          - v1alpha1
        resources:
          - apicollections
  - name: hub-agent.traefik.access
    clientConfig:
      service:
        name: admission
        namespace: default
        path: /api-access
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQU5DQzladTdEWnByTW5vd1oveStZaFl3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllXUnRhWE56YVc5dUxtUmxabUYxYkhRdWMzWmpNQjRYRFRJME1Ea3hOakE0TWpJeQpOMW9YRFRJMU1Ea3hOakE0TWpJeU4xb3dJREVlTUJ3R0ExVUVBeE1WWVdSdGFYTnphVzl1TG1SbFptRjFiSFF1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQW5lZXZhSlJ0NzJCTDUyWmEKVlJmUjJJM202MEFnYlVSZ3JlSEx0U2pFOG5UN2grS25VTEtlTHVwanVTRmVIOVF2enVxZ1ZkeVdMSys2dkpWQgo1anF4K3NmbkFs [...]
    sideEffects: None
    admissionReviewVersions:
      - v1
    rules:
      - operations:
          - CREATE
          - UPDATE
          - DELETE
        apiGroups:
          - hub.traefik.io
        apiVersions:
          - v1alpha1
        resources:
          - apiaccesses
  - name: hub-agent.traefik.rate-limit
    clientConfig:
      service:
        name: admission
        namespace: default
        path: /api-rate-limit
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQU5DQzladTdEWnByTW5vd1oveStZaFl3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllXUnRhWE56YVc5dUxtUmxabUYxYkhRdWMzWmpNQjRYRFRJME1Ea3hOakE0TWpJeQpOMW9YRFRJMU1Ea3hOakE0TWpJeU4xb3dJREVlTUJ3R0ExVUVBeE1WWVdSdGFYTnphVzl1TG1SbFptRjFiSFF1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQW5lZXZhSlJ0NzJCTDUyWmEKVlJmUjJJM202MEFnYlVSZ3JlSEx0U2pFOG5UN2grS25VTEtlTHVwanVTRmVIOVF2enVxZ1ZkeVdMSys2dkpWQgo1anF4K3NmbkFs [...]
    sideEffects: None
    admissionReviewVersions:
      - v1
    rules:
      - operations:
          - CREATE
          - UPDATE
          - DELETE
        apiGroups:
          - hub.traefik.io
        apiVersions:
          - v1alpha1
        resources:
          - apiratelimits
  - name: hub-agent.traefik.version
    clientConfig:
      service:
        name: admission
        namespace: default
        path: /api-version
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQU5DQzladTdEWnByTW5vd1oveStZaFl3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllXUnRhWE56YVc5dUxtUmxabUYxYkhRdWMzWmpNQjRYRFRJME1Ea3hOakE0TWpJeQpOMW9YRFRJMU1Ea3hOakE0TWpJeU4xb3dJREVlTUJ3R0ExVUVBeE1WWVdSdGFYTnphVzl1TG1SbFptRjFiSFF1CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQW5lZXZhSlJ0NzJCTDUyWmEKVlJmUjJJM202MEFnYlVSZ3JlSEx0U2pFOG5UN2grS25VTEtlTHVwanVTRmVIOVF2enVxZ1ZkeVdMSys2dkpWQgo1anF4K3NmbkFs [...]
    sideEffects: None
    admissionReviewVersions:
      - v1
    rules:
      - operations:
          - CREATE
          - UPDATE
          - DELETE
        apiGroups:
          - hub.traefik.io
        apiVersions:
          - v1alpha1
        resources:
          - apiversions
